k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: async-job-engine-service
  namespace: async-job-engine
  labels:
    app.kubernetes.io/name: async-job-engine
spec:
  type: ClusterIP        # El Ingress (ingress.yaml) enruta el tráfico externo al Service
  selector:
    app: async-job-engine
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
